# cloud_computing

./: .gitignore  LICENSE  README.md  Titanic_dataset.csv  activate.bat  setup.bat  setup.sh
BlobStorage/: knoumall_delete.py  knoumall_download.py  knoumall_upload.py  knoumall_upload1.py
blob_storage/: delete_blob.py  download_blob.py  knoumall_blob.py  knoumall_delete.py  knoumall_download.py  knoumall_upload.py  knoumall_upload_basic.py
data_analysis/: README.md  Titanic_dataset.csv  manual_data.csv
function_app/: WeatherForecastFunction  mail_send.py
knou_mall/: README.md
knou_mall/front_page/: Cloud-init  requirements.txt  shop_main.py
knou_mall/web_server/: Cloud-init  database.py  manage.py  models.py  setup.cfg  shop_main.py
knou_mall/web_server/knou_shop2/: database.py  models.py  shop_main.py
knou_mall/web_server/knou_shop2/static/css/: login.css
knou_mall/web_server/knou_shop2/templates/: index.html
knou_mall/web_server/templates/: basket.html  goods.html
learning_handouts/: README.md
media_server/: README.md  readme
shop1/: Cloud-init  cloud-init  shop_main.py
shop1/templates/: base.html  basket.html  goods.html  goods_view.html  index.html  tracking.html
shop2/: Cloud-init  MANIFEST.in  cloud-init  database.json  database.py  manage.py  models.py  requirements.txt  setup.cfg  shop_main.py  table.sql
shop2/knou_shop2/: database.py  init_util.py  manage.py  models.py  shop_main.py
shop2/templates/: base.html  goods_view.html  index.html  join.html  login.html  tracking.html
shop_mall/: table.sql
(+6 files in other folders)
