[metadata]
name = knou-cloud-computing-shop2
version = 1.0
author = Lee Ji-ho
author_email = search5@gmail.com
description = 한국방송통신대학교 컴퓨터과학과 4학년 2학기 클라우드 컴퓨팅 SHOP2
long_description = file: README.md
license = BSD-3-Clause
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =
    flask
    sqlalchemy
    waitress
    psycopg
    pg8000
    pyyaml

[options.entry_points]
console_scripts =
    create-db = knou_shop2.database:init_db
    shop_manage = knou_shop2.manage:cli
